contact form api

--- a/src/index.html
+++ b/src/index.html
@@ -242,17 +242,9 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
                 <!--Contact Form-->
-                <form id="contact-form" method="POST">
                     <div class="row">
-                        <form action="" method="post">
+                        <form id="contactForm" >
                             <div class="col-md-6 form-group">
-
-                                <!-- Hidden Required Fields -->
-                                <input type="hidden" name="project_name" value="Site Portfolio">
-                                <input type="hidden" name="admin_email" value="artem.shmatchenko.dev@gmail.com">
-                                <input type="hidden" name="form_subject" value="Contact person">
-                                <!-- END Hidden Required Fields -->
-
                                 <!--name-->
                                 <input type="text" class="form-control con-validate" id="contact-name"
                                        placeholder="Name"
@@ -279,7 +271,6 @@
 
                         </div>
                     </div>
-                </form>
             </div>
         </div>
     </div>
