--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+          content="Looking for a job Creative and passionate front-end developer with
+           less then 2 year experiense. Maintaining and supportig UI
+            using modern web technologies and Agile methodology.
+            Experienced in cross platgorm development and following D.R.Y. code patterns for clean and readeble codes">
+    <meta name="keywords" content="junior front end developer">
+    <meta name="author" content="Artem Shmatchenko">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico" type="image/icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -72,7 +79,7 @@
             <div class="col-lg-5 col-md-6 col">
                 <!--About Image-->
                 <div class="about-img">
-                    <img src="assets/img/myFoto.jpg" alt="MY_COVER">
+                    <img src="assets/img/myFoto.jpg" alt="Artem_Shmatchenko">
                 </div>
             </div>
             <div class="col-lg-7 col-md-6">
@@ -82,8 +89,11 @@
                         <h2>About Me.</h2>
                         <span>Front end Developer</span>
                     </div>
-                    <p>I'm <b>Artem Shmatchenko</b> Creative and passionate front-end developer with more then 1 year
-                        experiense. Maintaining and supportig UI using modern web technologies and Agile methodology.
+                    <p>Hello! My name is <b>Artem</b></p>
+                    <p>I got interested in website development back in 2017. At first it was just cognitive interest.
+                        But soon I was so immersed in it that now I can say with confidence that</p>
+                    <p>I'm creative and passionate front-end developer with less then 2 year
+                        experiense. Maintaining and supportig UI using modern web technologies.
                         Experienced in cross platgorm development and following D.R.Y. code patterns for clean and
                         readeble codes.</p>
 
@@ -91,12 +101,12 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/artem-shmatchenko-306135135/" target="_blank"><i
                                 class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/artem.shmatchenko/" target="_blank"><i
-                                class="fa fa-facebook"></i></a>
+                        <a href="https://codepen.io/teemofey/" target="_blank"><i
+                                class="fa fa-codepen"></i></a>
                         <a href="https://github.com/teemofeyrs" target="_blank"><i class="fa fa-github"></i></a>
                     </div>
                     <span class="about-button">
-                                <a class="main-btn" href="#">Look resume</a>
+                                <a class="main-btn" href="https://drive.google.com/file/d/1wq1FZdsQvn0tDwmSbGMizRPTLtS5q3P9/view?usp=sharing" target="_blank">Look resume</a>
                     </span>
                 </div>
             </div>
@@ -242,35 +252,36 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
                 <!--Contact Form-->
-                    <div class="row">
-                        <form id="contactForm" >
-                            <div class="col-md-6 form-group">
-                                <!--name-->
-                                <input type="text" class="form-control con-validate" id="contact-name"
-                                       placeholder="Name"
-                                       minlength="3"/>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <!--email-->
-                                <input type="email" class="form-control con-validate" id="contact-email"
-                                       placeholder="Email"/>
-                            </div>
-                            <div class="col-md-12 form-group">
-                                <!--message box-->
-                                <textarea class="form-control con-validate" rows="6" id="contact-message"
-                                          placeholder="How can we help you?"></textarea>
-                            </div>
-                            <div class="col-md-12 text-center">
-                                <!--contact button-->
-                                <button type="submit" id="sendEmail" class="mt-30 main-btn">
-                                    Send Message
-                                </button>
-                            </div>
-                        </form>
-                        <div id="messAlert" class="col col-md-12 alert alert-danger mt-5 messAlert" role="alert">
-
+                    <form id="contactForm">
+                        <div class="row">
+                        <div class="col-md-6 form-group">
+                            <!--name-->
+                            <input type="text" class="form-control con-validate" id="contact-name"
+                                   placeholder="Name"
+                                   minlength="3"/>
                         </div>
+                        <div class="col-md-6 form-group">
+                            <!--email-->
+                            <input type="email" class="form-control con-validate" id="contact-email"
+                                   placeholder="Email"/>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <!--message box-->
+                            <textarea class="form-control con-validate" rows="6" id="contact-message"
+                                      placeholder="How can we help you?"></textarea>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <!--contact button-->
+                            <button type="submit" id="sendEmail" class="mt-30 main-btn">
+                                Send Message
+                            </button>
+                        </div>
+                        </div>
+                    </form>
+                    <div id="messAlert" class="col col-md-12 alert alert-danger mt-5 messAlert" role="alert">
+
                     </div>
+
             </div>
         </div>
     </div>
